Closed Bug 1842128 Opened 2 years ago Closed 1 year ago

Upon opening Firefox, mouse cursor remains in busy state until first moved

Categories

(Core :: Widget: Win32, defect, P3)

Firefox 130
defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox133 --- fixed

People

(Reporter: nuonuonull, Assigned: rkraesig)

References

Details

Attachments

(5 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/115.0
Firefox for Android

Steps to reproduce:

I set up a custom home page for Firefox and launch Firefox without moving the mouse. The mouse is always busy, just looking like it's going around in circles. When I move the mouse, it goes back to normal, this problem is limited to starting and opening Firefox without moving the mouse every time Firefox is not running in the background. If you don't close the browser after moving the mouse, it won't happen again, but the probability of such a problem being triggered is high,Although the display is busy, but the software is running, I am the official version of Firefox 115, the system is Windows 10 LTSC 2021

Actual results:

The mouse pointer is always busy

Expected results:

Return to normal pointer state after busyness at startup

Component: Untriaged → Widget: Win32
Product: Firefox → Core

I can't reproduce this on my own Windows 10 machine, even when using a custom homepage with a deliberately-terrible onload script. Can you provide an example homepage which exhibits this behavior for you?

Flags: needinfo?(nuonuonull)

Use the extension for the lime start page

Flags: needinfo?(nuonuonull)
Attached video video.mp4

Note the state of my mouse, and also the extension I used for the lime start page

That seems to be a relatively lightweight homepage (and I can't reproduce the misbehavior using it), so it's probably not specific to that...

  • If you use about:blank as your custom homepage, does this still happen?
  • If you start Firefox in Troubleshoot mode (hold down Shift), does this still happen?
  • If you start Windows in Safe Mode (zh-CN), does this still happen?
Severity: -- → S4
Flags: needinfo?(nuonuonull)
Priority: -- → P3
Summary: Opening Firefox with the mouse running in circles while I move the mouse and then recover. This problem only occurs when the browser is opened and not operated. It only occurs once each time I open it → Upon opening Firefox, mouse cursor remains in busy state until first moved

The problem can still be triggered by setting the home page to about: blank, which can not be triggered in obstacle mode, or in Windows safe mode. The current version of the system is Windows 1019045.3208 Firefox 115.0.2

Flags: needinfo?(nuonuonull)
Attached video 2023-07-12 22-17-05.mp4

This problem can still occur using about:blank as the default start page

The problem can still be triggered by setting the home page to about: blank, which can not be triggered in obstacle mode, or in Windows safe mode.

The translator you're using has mangled this sentence. However:

  • If it does not happen when starting Firefox in Troubleshoot mode, please try disabling your Firefox addons one-by-one.
  • If it does not happen when starting Windows in safe mode, please try disabling your active background programs one-by-one.
Flags: needinfo?(nuonuonull)

My translation tool may have caused a misunderstanding. My side can trigger the problem in safe mode, and then my side can still trigger the problem without installing an add-on, starting in barrier-clearing mode can not trigger this problem

Flags: needinfo?(nuonuonull)

Start without additional components

Start in barrier removal mode

I am getting this bug as well. I am running Firefox 130.0 on Windows 10 x64. The bug occurs every time the browser is started, and it occurs even if I disable all extensions, and set my homepage and New Tab page to blank. The bug does not occur for me when I restart the browser in Troubleshoot Mode. I thought that maybe one of the settings I made to about:config was causing the problem, so I I downloaded and installed Firefox 129.0.2 Beta and I did not modify any settings whatsoever (none to about:config and none in the settings menu). Upon starting that browser for the first time the bug did not occur, but after going through the "Welcome to Firefox" type of prompts (the ones that ask you to import settings, etc.), I closed the browser and opened it again, and the bug occurred. The bug still occurs when Windows is in safe mode.

Thanks. On a current version of Firefox I can (intermittently, but usually) reproduce with the default New Tab page:

  • Move to a fresh or empty virtual desktop.
  • Ensure there's a Firefox shortcut on your desktop. Open Firefox.
  • Move the mouse over the Firefox window and close Firefox (Ctrl+Shift+Q).
  • Click the desktop. Navigate (via arrow keys) to the Firefox shortcut and press Enter.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: Firefox 115 → Firefox 130

The cursor will not necessarily be set properly when consuming the
skeleton UI. Do so in nsWindow::Show(), as we do for all other windows.

Assignee: nobody → rkraesig
Attachment #9426963 - Attachment description: WIP: Bug 1842128 - [1/1] set cursor when consuming skeleton UI r#win-reviewers?! → Bug 1842128 - [1/1] set cursor when consuming skeleton UI r?#win-reviewers!
Status: NEW → ASSIGNED
Pushed by rkraesig@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/648a1f614cd8 [1/1] set cursor when consuming skeleton UI r=win-reviewers,gstoll
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
Duplicate of this bug: 1699274
Duplicate of this bug: 1806238
QA Whiteboard: [qa-133b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: