Bug 1842128 - [1/1] set cursor when consuming skeleton UI  r=win-reviewers,gstoll

The cursor will not necessarily be set properly when consuming the
skeleton UI. Do so in nsWindow::Show(), as we do for all other windows.

Differential Revision: https://phabricator.services.mozilla.com/D223437